# loading

./: .gdbinit  .gitignore  CMakeLists.txt  Makefile  flash-blink  gdb-fw
blink/: CMakeLists.txt  blink.cpp  header.c
bootloader/: CMakeLists.txt  board.c  external.c  main.c
bootloader/arch/: m0.s
bootloader/linking/: common.ld  samd21x18.ld  samd51x19.ld
cmake/: ArduinoTools.cmake
include/: cortex.h  loading.h
linking/: common.ld  samd21.ld  samd21x18.ld  samd21x18_bootloader_large.ld  samd21x18_bootloader_small.ld  samd51.ld  samd51x19_bootloader_small.ld  samd51x20.ld
segger/: SEGGER_RTT.c  SEGGER_RTT_Conf.h  printf.c  printf.h  tiny_printf.c
shim/: CMakeLists.txt  shim.c
shim/linking/: common.ld  samd21x18.ld  samd51x19.ld
src/: external.c  loading.c
src/arch/: m4.s
tools/: mkfirmware.py  utilities.py
